--- a/style.css
+++ b/style.css
@@ -6,3 +6,14 @@
 body{
     background-color: #663399;
 }
+
+.container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 7px;
+    width: 150px;
+    height: 60px;
+}
