--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 }
 
 .container{
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -17,3 +18,14 @@ body{
     width: 150px;
     height: 60px;
 }
+.container:hover{
+    cursor: pointer;
+}
+p{
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #663399;
+    font-weight: bold;
+}
+
