--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: Font;
-    src: url(/88027--Cropar--abasvp.ir--/88027--Cropar--abasvp.ir--/Cropar.otf);
+    src: url(/assets/font/88027--Cropar--abasvp.ir--/Cropar.otf);
 }
 
 body{
@@ -14,6 +14,7 @@ body{
 }
 
 .container{
+    position: relative;
     text-align: center;
     position: absolute;
     top: 50%;
@@ -46,14 +47,14 @@ p{
 }
 
 .notification {
-    position: fixed;
+    position: absolute;
     bottom: 20px;
     right: 20px;
     background-color: #f0ad4e;
     color: white;
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 10px; /* فاصله بین نوتیفیکیشن‌ها */
+    margin-bottom: 10px; 
     opacity: 0; /* نوتیفیکیشن در ابتدا پنهان باشد */
     transition: opacity 0.3s ease; /* برای افکت ناپدید شدن */
 }
